--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-form": "^1.25.0",
     "@tanstack/react-table": "^8.21.3",
+    "@uploadthing/react": "^7.3.3",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,6 +48,7 @@
     "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "uploadthing": "^7.7.4",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
